# icesrag

./: .gitignore  FrontendDesign.drawio  LICENSE  README.md  all_collection_item_urls.txt  app.py  application.py  methodology.txt  nltkdownload.py  pyproject.toml  rag_ui.py  test.ipynb  test2_bm25.ipynb
.streamlit/: config.toml
assets/: rag_diagram.drawio
data/chroma.db/338674c0-0f91-4f92-b209-aca762ccce15/: index_metadata.pickle
data/chroma.db/4ccf16b0-2b97-42ba-96dc-bbe75607d173/: index_metadata.pickle
evaluation/2025 (sparse vs dense)/: 0_test_retrieval.py  1_gen_evaluation_queries.py  2_evaluate_queries.py
evaluation/2026 (hyde)/: 1_gen_hyde_queries.py  2_evaluate_hyde_queries.py  3_hyde_eda.ipynb
frontend/: app_retrievers.py  rag_ui.py
icesrag/: app.py  app_retrievers.py  rag_diagram.drawio  rag_ui.py
icesrag/.streamlit/: config.toml
icesrag/corpus_builder/: authors_and_key_words.py  embed_abstracts.py  iceswebscraper.py  main_builder.py  scrape_ices_repo.py
icesrag/evaluation/: gen_queries.py  test_retrieval.py
icesrag/load/package/: chroma.py  chroma_packager.py  sqlite_packager.py  strategy_pattern.py
icesrag/load/pipeline/: loader.py
icesrag/load/scrape/: iceswebscraper.py  strategy_pattern_scraper.py
icesrag/load/store/: chromadb.py  sqlitedb.py  strategy_pattern.py
icesrag/prototype_corpus_builder/: authors_and_key_words.py  embed_abstracts.py  scrape_ices_repo.py
icesrag/retrieve/pipeline/: retriever.py
icesrag/utils/: hyde.py  llms.py
prototype/corpus_builder/: ICES Links.txt  authors_and_key_words.py  embed_abstracts.py  iceswebscraper.py  scrape_ices_repo.py
prototype/evaluation/: eda.ipynb  evaluate_queries.py
(+12 files in other folders)
