[tool.poetry]
name = "icesrag"
version = "0.1.0"
description = "2024 Marquette ICES RAG Paper"
authors = ["Hunter Sandidge, Sam Brooks, Ian Ortega, Chase James"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
rank-bm25 = "^0.2.2"
chromadb = "^0.5.18"
streamlit = "^1.40.0"
beautifulsoup4 = "^4.12.3"
nltk = "^3.9.1"
ipykernel = "^6.29.5"
sentence-transformers = "^3.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
